package java.Simulation.AI;

public class PreyAI {
}
